# visual_computing_openwalnut

./: README.md  VERSION  installed_packages.md
artwork/Icons/: generate
doc/developer/: doxygenConfig
doc/examples/: LIC.owp  README.md  dvr.owp  lines.owp  torusOfPoints.owp
doc/qtgui/help/: OpenWalnutHelp.html  OpenWalnutWelcome.html
nifticlib-2.0.0/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
nifticlib-2.0.0/Testing/: CTestTestfile.cmake  Makefile  cmake_install.cmake
nifticlib-2.0.0/Testing/nifti_regress_test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
nifticlib-2.0.0/Testing/niftilib/: CTestTestfile.cmake  Makefile  cmake_install.cmake  first_test  second_test
nifticlib-2.0.0/nifticdf/: CTestTestfile.cmake  Makefile  cmake_install.cmake  libnifticdf.so.2.0.0
nifticlib-2.0.0/niftilib/: CTestTestfile.cmake  Makefile  cmake_install.cmake  libniftiio.so.2.0.0
nifticlib-2.0.0/utils/: CTestTestfile.cmake  Makefile  cmake_install.cmake  nifti1_test  nifti_stats  nifti_tool
nifticlib-2.0.0/znzlib/: CTestTestfile.cmake  Makefile  cmake_install.cmake  libznz.so.2.0.0
resources/: README
resources/projects/: example_DVR.owp  example_isosurface.owp
resources/scripting/: template.py
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/common/: W2DTFMapper.cpp  W2DTFMapper.h  WBoundingBox.h  WColor.cpp  WCondition.cpp  WCondition.h  WConditionOneShot.cpp  WConditionOneShot.h  WConditionSet.cpp  WConditionSet.h  WCounter.h  WDefines.h  WException.cpp  WFlag.h  WFlagForwarder.h  WHierarchicalTree.h  WHierarchicalTreeFibers.cpp  WHierarchicalTreeFibers.h  WHierarchicalTreeVoxels.h  WHistogram2D.cpp  WHistogram2D.h  WItemSelection.cpp  WItemSelection.h  WItemSelectionItem.h  WItemSelector.cpp  (+49 more)
src/modules/: CMakeLists.txt  modules-base.toolbox  modules-imageprocessing.toolbox  modules-others.toolbox  modules-sivert.toolbox
src/qtgui/: CMakeLists.txt  OpenWalnut.cpp  WApplication.h  WMainWindow.cpp  WMainWindow.h  WQtGLScreenCapture.cpp  WQtGLWidget.cpp  WQtGLWidget.h  WQtGui.cpp  WQtGui.h  WQtMessageDock.cpp  WQtMessagePopup.cpp  WQtMessagePopup.h  WQtModuleConfig.cpp  WQtModuleConfig.h  WQtNavGLWidget.cpp  WQtNavGLWidget.h  WSettingMenu.cpp
src/qtgui/abstractUI/: WUIQtGridWidget.h  WUIQtPropertyGroupWidget.h  WUIQtTabbedWidget.h  WUIQtViewWidget.cpp  WUIQtViewWidget.h  WUIQtWidgetBase.cpp  WUIQtWidgetBase.h  WUIQtWidgetFactory.cpp  WUIQtWidgetFactory.h
src/qtgui/controlPanel/: WPropertyBoolWidget.cpp  WPropertyColorWidget.cpp  WPropertyDoubleWidget.cpp  WPropertyFilenameWidget.cpp  WPropertyIntWidget.cpp  WPropertyIntervalWidget.cpp  WPropertyMatrix4X4Widget.cpp  WPropertyPositionWidget.cpp  WPropertySelectionWidget.cpp  WPropertyStringWidget.cpp  WPropertyStructWidget.cpp  WPropertyTransferFunction2DWidget.cpp  WPropertyTransferFunction2DWidget.h  WPropertyTransferFunctionWidget.cpp  WPropertyTriggerWidget.cpp  WPropertyWidget.cpp  WPropertyWidget.h  WQtBranchTreeItem.cpp  WQtBranchTreeItem.h  WQtColormapper.cpp  WQtColormapper.h  WQtControlPanel.cpp  WQtControlPanel.h  WQtDatasetTreeItem.cpp  WQtDatasetTreeItem.h  WQtModuleHeaderTreeItem.cpp  WQtModuleHeaderTreeItem.h  WQtModuleTreeItem.cpp  WQtModuleTreeItem.h  WQtPropertyGroupWidget.cpp  WQtRoiHeaderTreeItem.cpp  WQtRoiHeaderTreeItem.h  WQtSubjectTreeItem.cpp  WQtSubjectTreeItem.h  WQtTreeItem.cpp  WQtTreeItem.h
src/qtgui/controlPanel/transferFunction/: WTransferFunctionColorPoint.cpp  WTransferFunctionPoint.cpp  WTransferFunctionWidget.cpp  WTransferFunctionWidget.h
src/qtgui/controlPanel/transferFunction2D/: W2DTFAnimator.cpp  W2DTFAnimator.h  WTransferFunction2DBackground.cpp  WTransferFunction2DBackground.h  WTransferFunction2DControlPoint.cpp  WTransferFunction2DControlPoint.h  WTransferFunction2DEnums.h  WTransferFunction2DGUIWidget.cpp  WTransferFunction2DGUIWidget.h  WTransferFunction2DScene.cpp  WTransferFunction2DScene.h  WTransferFunction2DShape.cpp  WTransferFunction2DShape.h  WTransferFunction2DShapeWidget.cpp  WTransferFunction2DShapeWidget.h  WTransferFunction2DWidgetAnimationData.cpp  WTransferFunction2DWidgetAnimationData.h  WTransferFunction2DWidgetMapData.cpp  WTransferFunction2DWidgetMapData.h
src/qtgui/controlPanel/transferFunction2D/oldCode/: WTransferFunction2DBoxWidget.cpp  WTransferFunction2DBoxWidget.h  WTransferFunction2DTriangle.cpp  WTransferFunction2DTriangle.h  WTransferFunction2DTriangleWidget.cpp  WTransferFunction2DTriangleWidget.h
src/qtgui/events/: WModuleAssocEvent.cpp  WModuleAssocEvent.h  WModuleConnectEvent.cpp  WModuleConnectEvent.h  WModuleConnectorEvent.h  WModuleCrashEvent.cpp  WModuleCrashEvent.h  WModuleDisconnectEvent.cpp  WModuleDisconnectEvent.h  WModuleReadyEvent.cpp  WModuleReadyEvent.h  WModuleRemovedEvent.cpp  WModuleRemovedEvent.h  WPropertyChangedEvent.h  WRenderedFrameEvent.h  WRoiAssocEvent.h  WRoiRemoveEvent.h  WRoiSortEvent.h
src/qtgui/guiElements/: WQtDataModuleInput.cpp  WQtDockTitleWidget.cpp  WQtDockWidget.h  WQtIntervalEdit.cpp  WQtModuleMetaInfo.cpp  WQtModuleMetaInfo.h  WQtModuleOneToOneCombinerAction.cpp  WQtModuleOneToOneCombinerAction.h  WQtPropertyBoolAction.h  WQtPropertyTriggerAction.h  WScaleLabel.cpp  WScaleToolButton.cpp
src/qtgui/networkEditor/: WQtNetworkArrow.cpp  WQtNetworkArrow.h  WQtNetworkEditor.cpp  WQtNetworkEditor.h  WQtNetworkEditorView.cpp  WQtNetworkInputPort.cpp  WQtNetworkInputPort.h  WQtNetworkItem.cpp  WQtNetworkItem.h  WQtNetworkItemActivator.cpp  WQtNetworkItemActivator.h  WQtNetworkItemGrid.h  WQtNetworkOutputPort.cpp  WQtNetworkOutputPort.h  WQtNetworkPort.cpp  WQtNetworkPort.h  WQtNetworkScene.cpp  WQtNetworkSceneLayout.h
src/scriptUI/: OpenWalnutScript.cpp  WScriptUI.cpp
tools/: build_msys2.bash  generateCode.py  generateModuleTemplate.pl  shaderValidator.py
tools/AppImage/: AppRun  appimage.sh
tools/Windows/: build_MSVC_setEnvironment.ps1
tools/cmake/: Findniftilib.cmake  Findopenvr.cmake  OpenWalnut.cmake  OpenWalnutUtils.cmake  OpenWalnutVersion.cmake
tools/upload/: seafile.sh
(+906 files in other folders)
